# hetzner-dns-cli

./: .gitignore  LICENSE  README.md  STATUS.md  TODO.md  pyproject.toml
src/hetzner_dns/: __init__.py  cli.py  client.py
